# -advent-of-code-2020

./: advent-of-code2020.cabal
Common/: Parser.hs  State.hs
Common/Parser/: String.hs
common/Common/: Parser.hs
common/Common/Parser/: Combinator.hs  String.hs
day01/: Main.hs
day02/: Main.hs
day03/: Main.hs
day04/: Main.hs
day05/: Main.hs
day06/: Main.hs
day07/: Main.hs
day08/: Main.hs
day09/: Main.hs
day10/: Main.hs
day11/: Main.hs
day12/: Main.hs
day13/: Main.hs
day14/: Main.hs
day15/: Main.hs
day15/fast/: Main.hs
day16/: Main.hs
day17/: Main.hs
day18/: Main.hs
day19/: Main.hs
day20/: Main.hs
