cabal-version:       2.4
name:                advent-of-code2020
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library common
  ghc-options:         -Wall -O3
  build-depends:       base
  exposed-modules:     Common.Parser.Combinator,
                       Common.Parser,
                       Common.Parser.String,
                       Common.State
  hs-source-dirs:      common
  default-language:    Haskell2010

executable day01
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common
  hs-source-dirs:      day01
  default-language:    Haskell2010

executable day02
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common
  hs-source-dirs:      day02
  default-language:    Haskell2010

