cabal-version:       2.4
name:                advent-of-code2020
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library common
  ghc-options:         -Wall -O3
  build-depends:       base
  exposed-modules:     Common.Parser.Combinator,
                       Common.Parser,
                       Common.Parser.String,
                       Common.State
  hs-source-dirs:      common
  default-language:    Haskell2010

executable day01
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common
  hs-source-dirs:      day01
  default-language:    Haskell2010

executable day02
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common
  hs-source-dirs:      day02
  default-language:    Haskell2010

executable day03
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common
  hs-source-dirs:      day03
  default-language:    Haskell2010

executable day04
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common, containers
  hs-source-dirs:      day04
  default-language:    Haskell2010

executable day05
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common, containers
  hs-source-dirs:      day05
  default-language:    Haskell2010

executable day06
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, containers
  hs-source-dirs:      day06
  default-language:    Haskell2010

executable day07
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common, containers
  hs-source-dirs:      day07
  default-language:    Haskell2010

executable day08
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common, containers, vector
  hs-source-dirs:      day08
  default-language:    Haskell2010

executable day09
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, vector
  hs-source-dirs:      day09
  default-language:    Haskell2010

executable day10
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, containers
  hs-source-dirs:      day10
  default-language:    Haskell2010

executable day11
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, bytestring, vector
  hs-source-dirs:      day11
  default-language:    Haskell2010

executable day12
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common
  hs-source-dirs:      day12
  default-language:    Haskell2010

executable day13
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common
  hs-source-dirs:      day13
  default-language:    Haskell2010

executable day14
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common, containers, vector
  hs-source-dirs:      day14
  default-language:    Haskell2010

executable day15
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, containers
  hs-source-dirs:      day15
  default-language:    Haskell2010

executable day15fast
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, judy
  hs-source-dirs:      day15/fast
  default-language:    Haskell2010

executable day16
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, common, containers
  hs-source-dirs:      day16
  default-language:    Haskell2010

executable day17
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       base, containers
  hs-source-dirs:      day17
  default-language:    Haskell2010
